# geass

./: .dockerignore  .gitignore  .mcp.json  Anchor.toml  fly.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
.claude/: settings.json
.claude/skills/: geass-patterns.md
.github/workflows/: fly-signal-server.yml
apps/signal_server/: Dockerfile  fly.toml  mix.exs
apps/signal_server/config/: config.exs  dev.exs  runtime.exs
apps/signal_server/lib/signal_server/: application.ex
apps/signal_server/lib/signal_server_web/: endpoint.ex  user_socket.ex
apps/web/: .env.example  next.config.ts  package.json  vercel.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AiTradingTab.tsx  App.tsx  CashbackTab.tsx  CommunityTab.tsx  GeassLogo.tsx  GemCard.tsx  HomeTab.tsx  IntelTab.tsx  InternalWalletPanel.tsx  JupiterSwapModal.tsx  KolScanPanel.tsx  LandingPage.tsx  LaunchTab.tsx  MarketplaceTab.tsx  MobileShell.tsx  MriLeaderboard.tsx  MriRadarCard.tsx  NotificationsBell.tsx  PredictionsTab.tsx  ProfilePanel.tsx  ProfileTab.tsx  ScoreRing.tsx  SnipeModal.tsx  SocialTrackerTab.tsx  TokenModal.tsx  WatchlistTab.tsx  icons.tsx
apps/web/src/lib/: api.ts  auth.ts  avatar.ts  config.ts  cryptoWallet.ts  env.ts  internalWallet.ts  jupiter.ts  plans.ts  predictions.ts  pro.ts  pumpportal.ts  scoring.ts  signal-socket.ts  types.ts  useAiTrading.ts  useDexPrices.ts  useFirecrawl.ts  useGemStream.ts  useInternalWallet.ts  (+8 more)
programs/geass-predictions/: Cargo.toml
programs/geass-predictions/src/: lib.rs
src/: App.jsx
(+131 files in other folders)
