[package]
name = "geass-predictions"
version = "0.1.0"
description = "On-chain prediction markets for GEASS"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "geass_predictions"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
